--- a/S2/G5 - Progetto settimanale/Amazon Page/assets/css/styleCompito.css
+++ b/S2/G5 - Progetto settimanale/Amazon Page/assets/css/styleCompito.css
@@ -1,21 +1,118 @@
 /* Your styles here */
 body{
     margin: 0 auto;
-    background-color: brown;
+    padding: 0;
+    box-sizing: content-box;
+    background-color: #E9EDEE;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-head, figure{
+#logoAmazon{
     background-color: #222F3F;
-    margin:0 auto;
-    padding: 10px;
+    margin: 0 auto;
+    padding:0.5em;
     padding-left: 2em;
 }
 
-head, nav{
+#box1{
     background-color: #364759;
-    padding: 1px;
+    padding: 0.1em;
+    color: white;
+    padding-left: 0.5em;
 }
 
-head,nav,p{
+.allineamento{
+    display: inline-block;
+    font-size: small;
+    padding-left: 0.8em;
+}
+
+.allBox{
+    margin: 1em;
+   max-width: 150em;
+}
+
+#shopAll{
+    background-color: #F46600;
+    padding: 0em;
+    text-align: center;
+    font-size: 90%;
+    color: white;
+}
+
+main, section, h5{
+    padding:0.4em;
+}
+
+#holidayGift{
+    text-align: center;
+    background-image: url(../images/bg-image.png);
+    background-size: 100%;
+    width: auto;
+    height: auto;
+}
+
+#holidayGift, h2{
+    color: white;
+    padding: 0.8em;
+    font-size: 110%;
+}
+
+#findGift{
+    background-color:white;
+}
+
+.allinPerfectgift{
+    display: inline-block;
+    padding: 0.2em;
+}
+
+.cards{
+    display: inline-block;
+    border-radius: 20px;
+    text-align: center;
+    box-shadow: 2px 5px 5px grey;
+    margin: 0em;
+}
+
+#img1{
+    max-width: 100%;
     
+}
+#img2{
+    max-width: 100%;
+    
+}
+#img3{
+    max-width: 100%;
+    
+}
+#img4{
+    max-width: 100%;
+}
+
+#image01{
+    text-align: center;
+}
+
+#image02{
+    text-align: center;
+}
+
+#backToTop{
+    background-color: #364759;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    color: white;
+    text-align: center;
+}
+
+#logoAmazonFooter{
+    background-color: #222F3F;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 4em;
+    padding-left: 3em;
+    padding-bottom: 4em;
+    padding-right: 3em;
 }
