quasi ultime modifiche

--- a/S6/G5 - Progetto Settimanale Netflix/Netflix-assets/assets/css/style.css
+++ b/S6/G5 - Progetto Settimanale Netflix/Netflix-assets/assets/css/style.css
@@ -5,10 +5,12 @@ body{
     background-color: #141414;
 }
 
-#containerFooter{
-    padding-left: 15em;
-    padding-right: 15em;
-    
+
+@media (min-width:991px) {
+    #containerFooter{
+        padding-left:15%;
+        padding-right: 15%;
+}  
 }
 
 #contMain{
